# better-tts-mcp

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
src/better_tts_mcp/: __init__.py  server.py
src/better_tts_mcp/core/: __init__.py  audio.py  naming.py  parsing.py  results.py
src/better_tts_mcp/tools/: __init__.py  synthesis.py  voices.py
