[project]
name = "better-tts-mcp"
version = "0.1.0"
description = "A feature-rich MCP server for Microsoft Edge Text-to-Speech, supporting voice listing, speech synthesis with subtitles, parameter tuning, and batch processing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "chengaoshen" },
]
keywords = ["mcp", "tts", "edge-tts", "text-to-speech", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "edge-tts>=7.0.0",
]

[project.scripts]
better-tts-mcp = "better_tts_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
